--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,8 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+#root {
+    height: 100vh;
+    background-color: rgb(24, 108, 108);
+}
