--- a/src/App.css
+++ b/src/App.css
@@ -21,6 +21,7 @@ html {
     animation: fadein 0.5s ease-in;
 }
 
+
 @keyframes fadein {
     0% {
         opacity: 0;
@@ -45,5 +46,33 @@ html {
     100% {
         opacity: 1;
         backdrop-filter: blur(0px)
+    }
+}
+
+
+#pulse {
+    /* transform: scale(1); */
+    animation: pulse 1s infinite;
+}
+
+@keyframes pulse {
+    0% {
+
+        color: white;
+        font-weight: initial;
+    }
+
+    50% {
+
+        /* opacity: 0; */
+        color: yellow;
+        font-weight: bold;
+
+    }
+
+    100% {
+
+        color: white;
+        font-weight: initial;
     }
 }
