--- a/src/App.css
+++ b/src/App.css
@@ -14,3 +14,24 @@ html {
     height: 100vh;
     font-family: 'Alkatra', cursive;
 }
+
+/* Making the scrollbars invisible */
+main,
+div {
+    -ms-overflow-style: none;
+    /* Edge, Internet Explorer */
+    scrollbar-width: none;
+    /* Firefox */
+    overflow-y: scroll;
+}
+
+/* hides scrollbars while allowing to scroll */
+div::-webkit-scrollbar {
+    display: none;
+    /* Chrome, Safari, Opera */
+}
+
+main::-webkit-scrollbar {
+    display: none;
+    /* Chrome, Safari, Opera */
+}
